versions/18.7.1/ko/bridge.md
- 혈중 산소: `bridge:root=com.apple.OxygenSaturationSettings`
- 손씻기: `bridge:root=com.apple.BrookBridgeSettings`
- 손씻기 → 알림 허용: `bridge:root=com.apple.BrookBridgeSettings#ALLOW_NOTIFICATIONS_ID`
- 손씻기 → 알림 센터에 보내기: `bridge:root=com.apple.BrookBridgeSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- 손씻기 → 알림 끔: `bridge:root=com.apple.BrookBridgeSettings#NOTIFICATIONS_OFF_ID`
- 손씻기 → 알림 그룹 설정: `bridge:root=com.apple.BrookBridgeSettings&path=NOTIFICATION_COALESCING_ID`
- 손씻기 → 손씻기 타이머: `bridge:root=com.apple.BrookBridgeSettings#HANDWASHING_TIMER_ID`
- 디스플레이 및 밝기: `bridge:root=DISPLAY_AND_BRIGHTNESS`
- 디스플레이 및 밝기 → 깨우기 시간: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration`
- 디스플레이 및 밝기 → 깨우기 시간 → 탭할 때: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#ON_TAP_GROUP_ID`
- 디스플레이 및 밝기 → 깨우기 시간 → 15초 동안 켜져 있기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#SHORT_WAKE_ID`
- 디스플레이 및 밝기 → 깨우기 시간 → 70초 동안 켜져 있기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=Wake%20Duration#LONG_WAKE_ID`
- 디스플레이 및 밝기 → 밝기: `bridge:root=DISPLAY_AND_BRIGHTNESS#BRIGHTNESS_LABEL`
- 디스플레이 및 밝기 → 화면 상시표시: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID`
- 디스플레이 및 밝기 → 화면 상시표시 → 화면 상시표시: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_ID`
- 디스플레이 및 밝기 → 화면 상시표시 → 손목 내리기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID#TRITIUM_PRIVACY_GROUP_ID`
- 디스플레이 및 밝기 → 화면 상시표시 → 알림 보기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications`
- 디스플레이 및 밝기 → 화면 상시표시 → 알림 보기 → 알림 보기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- 디스플레이 및 밝기 → 화면 상시표시 → 알림 보기 → APPLE WATCH용 앱: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Notifications#APP_GROUP_ID`
- 디스플레이 및 밝기 → 화면 상시표시 → 앱 보기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps`
- 디스플레이 및 밝기 → 화면 상시표시 → 앱 보기 → 앱 보기: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_BACKLIGHT_PRIVACY_GLOBAL_APP`
- 디스플레이 및 밝기 → 화면 상시표시 → 앱 보기 → 앱: `bridge:root=DISPLAY_AND_BRIGHTNESS&path=TRITIUM_ID/Show%20Apps#APP_GROUP_ID`
- 디스플레이 및 밝기 → 텍스트 크기: `bridge:root=DISPLAY_AND_BRIGHTNESS#TEXT_SIZE`
- 디스플레이 및 밝기 → 볼드체 텍스트: `bridge:root=DISPLAY_AND_BRIGHTNESS#BOLD_TEXT`
- 디스플레이 및 밝기 → 깨우기: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE`
- 디스플레이 및 밝기 → 손목 올려 깨우기: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_WRIST_RAISE_SWITCH_ID`
- 디스플레이 및 밝기 → 크라운 돌려 깨우기: `bridge:root=DISPLAY_AND_BRIGHTNESS#WAKE_SCREEN_ON_CROWN_UP_SWITCH_ID`
- 사진: `bridge:root=com.apple.NanoPhotosBridgeSettings`
- 사진 → 사진 동기화: `bridge:root=com.apple.NanoPhotosBridgeSettings#Photo%20Syncing`
- 사진 → 추억: `bridge:root=com.apple.NanoPhotosBridgeSettings#Memories`
- 사진 → 추억 동기화: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Memories`
- 사진 → 추천 사진: `bridge:root=com.apple.NanoPhotosBridgeSettings#Featured%20Photos`
- 사진 → 추천 사진 동기화: `bridge:root=com.apple.NanoPhotosBridgeSettings#Sync%20Featured%20Photos`
- 사진 → 앨범: `bridge:root=com.apple.NanoPhotosBridgeSettings#Album`
- 사진 → 앨범 동기화: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Sync%20Album`
- 사진 → 사진 제한: `bridge:root=com.apple.NanoPhotosBridgeSettings&path=Photos%20Limit`
- 사진 → 알림 설정: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_RADIO_GROUP_ID`
- 사진 → 나의 iPhone 미러링: `bridge:root=com.apple.NanoPhotosBridgeSettings#MIRROR_MY_COMPANION_ID`
- 사진 → 사용자화: `bridge:root=com.apple.NanoPhotosBridgeSettings#CUSTOM_ID`
- 컴플리케이션: `bridge:root=COMPLICATIONS`
- 앱 보기: `bridge:root=APP_VIEW_ID`
- 일반: `bridge:root=GENERAL_LINK`
- 일반 → 정보: `bridge:root=GENERAL_LINK&path=ABOUT`
- 일반 → 정보 → 이름: `bridge:root=GENERAL_LINK&path=ABOUT/NAME_CELL_ID`
- 일반 → 정보 → 제한 보증: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION`
- 일반 → 정보 → 제한 보증 → 제한 보증: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Limited%20Warranty`
- 일반 → 정보 → 제한 보증 → 적용 범위 세부사항: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#COVERAGE%20DETAILS`
- 일반 → 정보 → 제한 보증 → 하드웨어 적용 범위: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Hardware%20Coverage`
- 일반 → 정보 → 제한 보증 → 대화 및 전화 지원: `bridge:root=GENERAL_LINK&path=ABOUT/WARRANTY_DESCRIPTION#Chat%20&%20Phone%20Support`
- 일반 → 정보 → 노래: `bridge:root=GENERAL_LINK&path=ABOUT#SONGS_CELL_ID`
- 일반 → 정보 → 사진: `bridge:root=GENERAL_LINK&path=ABOUT#PHOTOS_CELL_ID`
- 일반 → 정보 → 응용 프로그램: `bridge:root=GENERAL_LINK&path=ABOUT#APPLICATIONS_CELL_ID`
- 일반 → 정보 → 용량: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_CAPACITY_CELL_ID`
- 일반 → 정보 → 사용 가능: `bridge:root=GENERAL_LINK&path=ABOUT#STORAGE_AVAILABLE_CELL_ID`
- 일반 → 정보 → 버전: `bridge:root=GENERAL_LINK&path=ABOUT#OS_VERSION_CELL_ID`
- 일반 → 정보 → 이동통신사: `bridge:root=GENERAL_LINK&path=ABOUT#CARRIER_CELL_ID`
- 일반 → 정보 → 모델: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_MODEL_CELL_ID`
- 일반 → 정보 → 일련 번호: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_SERIAL_NUMBER_CELL_ID`
- 일반 → 정보 → Bluetooth: `bridge:root=GENERAL_LINK&path=ABOUT#DEVICE_BLUETOOTH_ADDRESS_CELL_ID`
- 일반 → 정보 → IMEI: `bridge:root=GENERAL_LINK&path=ABOUT#IMEI_CELL_ID`
- 일반 → 정보 → ICCID: `bridge:root=GENERAL_LINK&path=ABOUT#ICCID_CELL_ID`
- 일반 → 정보 → EID: `bridge:root=GENERAL_LINK&path=ABOUT/EID_CELL_ID`
- 일반 → 정보 → SEID: `bridge:root=GENERAL_LINK&path=ABOUT/DEVICE_SEID_CELL_ID`
- 일반 → 정보 → 법적 정보: `bridge:root=GENERAL_LINK&path=ABOUT/LEGAL`
- 일반 → 정보 → Apple Watch 사용 설명서 보기: `bridge:root=GENERAL_LINK&path=ABOUT#MANUAL`
- 일반 → 소프트웨어 업데이트: `bridge:root=GENERAL_LINK&path=SOFTWARE_UPDATE_LINK`
- 일반 → 자동으로 앱 설치: `bridge:root=GENERAL_LINK#AUTO_APP_INSTALL_SWITCH_ID`
- 일반 → 에어플레인 모드: `bridge:root=GENERAL_LINK&path=AIRPLANE_MODE_ID`
- 일반 → 집중 모드: `bridge:root=GENERAL_LINK&path=FOCUS_ID`
- 일반 → 집중 모드 → 나의 iPhone 미러링: `bridge:root=GENERAL_LINK&path=FOCUS_ID#Mirror%20my%20iPhone`
- 일반 → 시계 방향: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION`
- 일반 → 시계 방향 → Apple Watch 착용: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#WRIST_CHOICE_ID`
- 일반 → 시계 방향 → 왼쪽 손목: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LEFT_HAND_ID`
- 일반 → 시계 방향 → 오른쪽 손목: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#RIGHT_HAND_ID`
- 일반 → 시계 방향 → 왼쪽에 Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_LEFT_ID`
- 일반 → 시계 방향 → 오른쪽에 Digital Crown: `bridge:root=GENERAL_LINK&path=GIZMO_ORIENTATION#LISA_ON_RIGHT_ID`
- 일반 → Apple 계정: `bridge:root=GENERAL_LINK&path=LINK_WITH_ICLOUD_LINK`
- 일반 → 받아쓰기 활성화: `bridge:root=GENERAL_LINK#DICTATION_CELL_ID`
- 일반 → Handoff 활성화: `bridge:root=GENERAL_LINK#CONTINUITY`
- 일반 → 탁상시계 모드: `bridge:root=GENERAL_LINK#NIGHTSTAND_CELL_ID`
- 일반 → 스크린샷 활성화: `bridge:root=GENERAL_LINK#BUTTON_CHORD_CELL_ID`
- 일반 → 대기 시간 | 완전히 충전된 후 경과된 시간 | 저장 공간 | 전원 절약: `bridge:root=GENERAL_LINK&path=USAGE_LINK`
- 일반 → 진단 로그: `bridge:root=GENERAL_LINK&path=DIAGNOSTIC_LOG_BROWSER`
- 일반 → Watch 분석 복사: `bridge:root=GENERAL_LINK#LOGS_CELL_ID`
- 일반 → 재설정: `bridge:root=GENERAL_LINK&path=RESET`
- 일반 → 잠수하는 동안 자동 실행: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH`
- 일반 → 잠수하는 동안 자동 실행 → 오디오 앱 자동 실행: `bridge:root=GENERAL_LINK&path=AUTO_LAUNCH#AUTO_LAUNCH_MEDIA`
- 일반 → 시계로 돌아가기: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK`
- 일반 → 시계로 돌아가기 → 시계로 돌아가기: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#CSLPRFReturnToClockGroupID`
- 일반 → 시계로 돌아가기 → 항상: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_ALWAYS`
- 일반 → 시계로 돌아가기 → 2분 후: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_2_MINUTES`
- 일반 → 시계로 돌아가기 → 1시간 후: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#RETURN_TO_CLOCK_AFTER_1_HOUR`
- 일반 → 시계로 돌아가기 → 앱: `bridge:root=GENERAL_LINK&path=RETURN_TO_CLOCK#APP_GROUP_ID`
- 일반 → 언어 및 지역: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION`
- 일반 → 언어 및 지역 → 나의 iPhone 미러링: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#MIRROR_MY_COMPANION_ID`
- 일반 → 언어 및 지역 → 사용자화: `bridge:root=GENERAL_LINK&path=LANGUAGE_AND_REGION#CUSTOM_ID`
- 일반 → Wake Screen: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN`
- 일반 → Wake Screen → 지금 재생 중: `bridge:root=GENERAL_LINK&path=WAKE_SCREEN#AUTO_LAUNCH_MEDIA`
- 스마트 스택: `bridge:root=SMARTSTACK_LINK`
- 사운드 및 햅틱: `bridge:root=SOUNDS_ID`
- 사운드 및 햅틱 → 알림 음량: `bridge:root=SOUNDS_ID#AUDIO_SLIDER`
- 사운드 및 햅틱 → 무음 모드: `bridge:root=SOUNDS_ID#audio_mute_switch`
- 사운드 및 햅틱 → 헤드폰 오디오: `bridge:root=SOUNDS_ID#HEADPHONE_AUDIO_GROUP`
- 사운드 및 햅틱 → 헤드폰 안전성: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING`
- 사운드 및 햅틱 → 헤드폰 안전성 → 헤드폰 알림: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneNotificationsSwitchKey`
- 사운드 및 햅틱 → 헤드폰 안전성 → 큰 소리 줄이기: `bridge:root=SOUNDS_ID&path=HEADPHONE_LEVEL_LIMIT_SETTING#COSHeadphoneLevelLimitSwitchKey`
- 사운드 및 햅틱 → 햅틱: `bridge:root=SOUNDS_ID#Haptics`
- 사운드 및 햅틱 → 햅틱 알림: `bridge:root=SOUNDS_ID#Haptic%20Alerts`
- 사운드 및 햅틱 → 크라운 햅틱: `bridge:root=SOUNDS_ID#JACKRABBIT_ID`
- 사운드 및 햅틱 → 시스템 햅틱: `bridge:root=SOUNDS_ID#SYSTEM_HAPTICS_ID`
- 사운드 및 햅틱 → 가려서 소리 끄기: `bridge:root=SOUNDS_ID#COVER_TO_MUTE`
- 긴급 구조 요청: `bridge:root=SOS_MODE_ID`
- 개인정보 보호: `bridge:root=PRIVACY_ID`
- 개인정보 보호 → 심박수: `bridge:root=PRIVACY_ID#HEART_RATE_ENABLED_LABEL`
- 개인정보 보호 → 호흡수: `bridge:root=PRIVACY_ID#RESPIRATORY_RATE_LABEL`
- 개인정보 보호 → 피트니스 추적: `bridge:root=PRIVACY_ID#FITNESS_TRACKING_ENABLED_LABEL`
- 개인정보 보호 → 피트니스 보정 데이터 재설정: `bridge:root=PRIVACY_ID#RESET_MOTION_CALIBRATION_LABEL`
- 개인정보 보호 → 주변 소리 측정: `bridge:root=PRIVACY_ID#ENVIRONMENTAL_AUDIO_ENABLED_SWITCH_ID`
- 개인정보 보호 → 헤드폰 오디오 측정: `bridge:root=PRIVACY_ID&path=HeadphoneAudio`
- 개인정보 보호 → 헤드폰 오디오 측정 → 건강 앱에 저장: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#SAVE_IN_HEALTH_GROUP`
- 개인정보 보호 → 헤드폰 오디오 측정 → 8일 동안: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#FOR_EIGHT_DAYS_CELL`
- 개인정보 보호 → 헤드폰 오디오 측정 → 삭제할 때까지: `bridge:root=PRIVACY_ID&path=HeadphoneAudio#UNTIL_I_DELETE_CELL`
- 개인정보 보호 → 혈중 산소 측정: `bridge:root=PRIVACY_ID#OXYGEN_SATURATION_ENABLED_SWITCH_ID`
- 개인정보 보호 → 손목 온도: `bridge:root=PRIVACY_ID#WRIST_TEMPERATURE_SWITCH_ID`
- 스크린 타임: `bridge:root=SCREEN_TIME_ID`
- Nike Run Club: `bridge:root=VICTORY_ROW_ID`
- 시계: `bridge:root=com.apple.NanoClockBridgeSettings`
- 시계 → 24시간제: `bridge:root=com.apple.NanoClockBridgeSettings#24-Hour%20Time`
- 시계 → 차임: `bridge:root=com.apple.NanoClockBridgeSettings#Chimes`
- 시계 → 소리: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds`
- 시계 → 소리 → 종: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Bells`
- 시계 → 소리 → 새: `bridge:root=com.apple.NanoClockBridgeSettings&path=Sounds#Birds`
- 시계 → 시간 말하기: `bridge:root=com.apple.NanoClockBridgeSettings#Speak%20Time`
- 시계 → 무음 모드로 제어: `bridge:root=com.apple.NanoClockBridgeSettings#Control%20With%20Silent%20Mode`
- 시계 → 항상 말하기: `bridge:root=com.apple.NanoClockBridgeSettings#Always%20Speak`
- 시계 → 탭틱 시간: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time`
- 시계 → 탭틱 시간 → 탭틱 시간: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Taptic%20Time`
- 시계 → 탭틱 시간 → 숫자: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Digits`
- 시계 → 탭틱 시간 → 간략하게: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Terse`
- 시계 → 탭틱 시간 → 모스 부호: `bridge:root=com.apple.NanoClockBridgeSettings&path=Taptic%20Time#Morse%20Code`
- 시계 → iPhone의 알림 푸시: `bridge:root=com.apple.NanoClockBridgeSettings#Push%20Alerts%20from%20iPhone`
- 시계 → 알림 표시: `bridge:root=com.apple.NanoClockBridgeSettings#Notifications%20Indicator`
- 시계 → 모노그램: `bridge:root=com.apple.NanoClockBridgeSettings&path=MONOGRAM_ID`
- 시계 → 시계 페이스 알림: `bridge:root=com.apple.NanoClockBridgeSettings#Watch%20Face%20Notifications`
- 시계 → 축약한 도시 이름: `bridge:root=com.apple.NanoClockBridgeSettings&path=City%20Abbreviations`
- 시계 → Siri 페이스 데이터 소스: `bridge:root=com.apple.NanoClockBridgeSettings&path=Siri%20Face%20Data%20Sources`
- 소음: `bridge:root=com.apple.Noise.settings`
- 소음 → 주변 소리 측정: `bridge:root=com.apple.Noise.settings#ENABLE_MEASUREMENTS_ID`
- 소음 → 소음 알림: `bridge:root=com.apple.Noise.settings#LOUD_NOTIFICATION_GROUP_ID`
- 소음 → 소음 임계값: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID`
- 소음 → 소음 임계값 → 끔: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#OFF`
- 소음 → 소음 임계값 → 80데시벨: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_80`
- 소음 → 소음 임계값 → 85데시벨: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_85`
- 소음 → 소음 임계값 → 90데시벨: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_90`
- 소음 → 소음 임계값 → 95데시벨: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_95`
- 소음 → 소음 임계값 → 100데시벨: `bridge:root=com.apple.Noise.settings&path=LOUD_NOTIFICATION_ID#ID_BPM_100`
- 소음 → 알림 그룹 설정: `bridge:root=com.apple.Noise.settings&path=NOTIFICATION_COALESCING_ID`
- 캘린더: `bridge:root=com.apple.NanoCalendarBridgeSettings`
- 캘린더 → 알림: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_RADIO_GROUP_ID`
- 캘린더 → 나의 iPhone 미러링: `bridge:root=com.apple.NanoCalendarBridgeSettings#MIRROR_MY_COMPANION_ID`
- 캘린더 → 사용자화…: `bridge:root=com.apple.NanoCalendarBridgeSettings#CUSTOM_ID`
- 캘린더 → 캘린더: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_RADIO_GROUP_ID`
- 캘린더 → 나의 iPhone 미러링: `bridge:root=com.apple.NanoCalendarBridgeSettings#CALENDARS_MIRROR_MY_COMPANION_ID`
- 캘린더 → 사용자화…: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=CALENDARS_CUSTOM_ID`
- 캘린더 → 예정된 이벤트: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Upcoming%20Events`
- 캘린더 → 초대: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitations`
- 캘린더 → 초대받은 사람 응답: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Invitee%20Responses`
- 캘린더 → 공유 캘린더 변경: `bridge:root=com.apple.NanoCalendarBridgeSettings&path=Shared%20Calendar%20Alerts`
- 워키토키: `bridge:root=com.apple.tincan.settings`
- 워키토키 → 알림 허용: `bridge:root=com.apple.tincan.settings#ALLOW_NOTIFICATIONS_ID`
- 워키토키 → 알림 센터에 보내기: `bridge:root=com.apple.tincan.settings#SEND_TO_NOTIFICATION_CENTER_ID`
- 워키토키 → 알림 끔: `bridge:root=com.apple.tincan.settings#NOTIFICATIONS_OFF_ID`
- 워키토키 → 알림 그룹 설정: `bridge:root=com.apple.tincan.settings&path=NOTIFICATION_COALESCING_ID`
- 워키토키 → 친구: `bridge:root=com.apple.tincan.settings#Friends`
- Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID`
- Siri → Siri에게 요청하기: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASK_SIRI_GROUP_ID`
- Siri → Siri: `bridge:root=SIRI_WATCH_SETTINGS_ID#HEY_SIRI_SWITCH_ID`
- Siri → 들어서 말하기: `bridge:root=SIRI_WATCH_SETTINGS_ID#RAISE_TO_SPEAK_SWITCH_ID`
- Siri → Digital Crown 누르기: `bridge:root=SIRI_WATCH_SETTINGS_ID#DIGITAL_CROWN_SWITCH_ID`
- Siri → 음성 피드백: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID`
- Siri → 음성 피드백 → 화면 상시표시: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_ALWAYS_ON_ID`
- Siri → 음성 피드백 → 무음 모드로 제어: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_CONTROL_WITH_SILENT_MODE_ID`
- Siri → 음성 피드백 → 헤드폰에서만: `bridge:root=SIRI_WATCH_SETTINGS_ID&path=VOICE_FEEDBACK_ID#VOICE_FEEDBACK_HEADPHONES_ONLY_ID`
- Siri → 음성 음량: `bridge:root=SIRI_WATCH_SETTINGS_ID#VOICE_VOLUME_GROUP_ID`
- Siri → Siri 제안: `bridge:root=SIRI_WATCH_SETTINGS_ID#ASSISTANT_SUGGESTIONS_GROUP_ID`
- 운동: `bridge:root=com.apple.SessionTrackerAppSettings`
- 운동 → 목표 수치 보기: `bridge:root=com.apple.SessionTrackerAppSettings#PRO_SETTING_ENABLED_LABEL`
- 운동 → 운동 현황: `bridge:root=com.apple.SessionTrackerAppSettings&path=METRIC_VIEW_ID`
- 운동 → 자동 일시 정지: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID`
- 운동 → 자동 일시 정지 → 자동 일시 정지: `bridge:root=com.apple.SessionTrackerAppSettings&path=AUTO_PAUSE_ID#WorkoutAutoPauseSwitch`
- 운동 → 운동 시작 알림: `bridge:root=com.apple.SessionTrackerAppSettings#AUTO_START_WORKOUT_NOTIFICATIONS_ENABLED_LABEL`
- 운동 → 운동 종료 알림: `bridge:root=com.apple.SessionTrackerAppSettings#END_REMINDERS_ENABLED_LABEL`
- 운동 → 눌러서 일시 정지: `bridge:root=com.apple.SessionTrackerAppSettings#CHORD_PRESS_PAUSE_WORKOUT_ENABLED_LABEL`
- 운동 → 운동 기구 감지: `bridge:root=com.apple.SessionTrackerAppSettings#NFC_ENABLED_LABEL_ID`
- 운동 → 페이스/속도 현황: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL`
- 운동 → 페이스/속도 현황 → 현재: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#CURRENT_PACE_ID`
- 운동 → 페이스/속도 현황 → 평균: `bridge:root=com.apple.SessionTrackerAppSettings&path=PACE_VIEW_LABEL#AVERAGE_PACE_ID`
- 운동 → 운동 플레이리스트: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID`
- 운동 → 운동 플레이리스트 → 없음: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#NONE_AUTOSTART_ID`
- 운동 → 운동 플레이리스트 → 플레이리스트: `bridge:root=com.apple.SessionTrackerAppSettings&path=MUSIC_AUTOSTART_TITLE_ID#MUSIC_PLAYLIST_GROUP_ID`
- 운동 → 처음부터 재생: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_PLAY_FROM_BEGINNING_SETTING_ID`
- 운동 → 임의 재생: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_MUSIC_SHUFFLE_SETTING_ID`
- 운동 → 측정 단위: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID`
- 운동 → 측정 단위 → 칼로리: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_CALORIES_ID`
- 운동 → 측정 단위 → 킬로칼로리: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOCALORIES_ID`
- 운동 → 측정 단위 → 킬로줄: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#ENERGY_UNITS_KILOJOULES_ID`
- 운동 → 측정 단위 → 야드: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_YARDS_ID`
- 운동 → 측정 단위 → 미터: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#POOL_LENGTH_METERS_ID`
- 운동 → 측정 단위 → 마일: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_MILES_ID`
- 운동 → 측정 단위 → 킬로미터: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#CYCLING_WORKOUTS_KILOMETERS_ID`
- 운동 → 측정 단위 → 마일: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_MILES_ID`
- 운동 → 측정 단위 → 킬로미터: `bridge:root=com.apple.SessionTrackerAppSettings&path=UNITS_OF_MEASURE_ID#WALKING_AND_RUNNING_WORKOUTS_KILOMETERS_ID`
- 운동 → 음성 피드백: `bridge:root=com.apple.SessionTrackerAppSettings#WORKOUT_VOICE_FEEDBACK_LABEL`
- 운동 → 걷기 시간: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_FOOTER_ID`
- 운동 → Apple Watch에 새로운 운동 추가: `bridge:root=com.apple.SessionTrackerAppSettings#GUIDED_WORKOUT_PREFETCH_LABEL_ID`
- 운동 → 저전력 모드: `bridge:root=com.apple.SessionTrackerAppSettings#LOW_POWER_MODE`
- 메시지: `bridge:root=com.apple.MessagesBridgeSettings`
- 메시지 → 나의 iPhone 미러링: `bridge:root=com.apple.MessagesBridgeSettings#MIRROR_MY_COMPANION_ID`
- 메시지 → 사용자화: `bridge:root=com.apple.MessagesBridgeSettings#CUSTOM_ID`
- 메시지 → 기본 응답: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES`
- 메시지 → 기본 응답 → 기본 응답: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Default%20Replies`
- 메시지 → 기본 응답 → 스마트 응답: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Smart%20Replies`
- 메시지 → 기본 응답 → 응답 추가…: `bridge:root=com.apple.MessagesBridgeSettings&path=DEFAULT_REPLIES#Add%20reply%E2%80%A6`
- 메시지 → 알림 반복: `bridge:root=com.apple.MessagesBridgeSettings&path=PLAY_ALERT_TONE`
- 메시지 → 오디오 메시지: `bridge:root=com.apple.MessagesBridgeSettings&path=AudioMessagesMode`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기: `bridge:root=PASSCODE_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → 암호 켜기: `bridge:root=PASSCODE_ID#TOGGLE_PASSCODE_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → 암호 변경: `bridge:root=PASSCODE_ID#CHANGE_PASSCODE_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → 간단한 암호: `bridge:root=PASSCODE_ID#SIMPLE_PASSCODE_SWITCH_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → iPhone으로 잠금 해제: `bridge:root=PASSCODE_ID#AUTO_UNLOCK_SWITCH_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → 데이터 지우기: `bridge:root=PASSCODE_ID#ERASE_DATA_SWITCH_ID`
- iPhone으로 잠금 해제 | 간단한 암호 | 데이터 지우기 | 손목 인식 | 암호 | 암호 끄기 | 암호 변경 | 암호 켜기 → 손목 인식: `bridge:root=PASSCODE_ID#WRIST_DETECTION_CELL_ID`
- Mail: `bridge:root=com.apple.NanoMailBridgeSettings`
- Mail → 나의 iPhone 미러링: `bridge:root=com.apple.NanoMailBridgeSettings#MIRROR_MY_COMPANION_ID`
- Mail → 사용자화: `bridge:root=com.apple.NanoMailBridgeSettings#CUSTOM_ID`
- Mail → Mail 설정: `bridge:root=com.apple.NanoMailBridgeSettings#Mail%20Settings`
- Mail → 계정: `bridge:root=com.apple.NanoMailBridgeSettings&path=Accounts`
- Mail → Mail 포함: `bridge:root=com.apple.NanoMailBridgeSettings&path=Include%20Mail`
- Mail → 메시지 미리보기: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview`
- Mail → 메시지 미리보기 → 없음: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#0`
- Mail → 메시지 미리보기 → 1줄: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#1`
- Mail → 메시지 미리보기 → 2줄: `bridge:root=com.apple.NanoMailBridgeSettings&path=Message%20Preview#2`
- Mail → 기본 응답: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies`
- Mail → 기본 응답 → 기본 응답: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Default%20Replies`
- Mail → 기본 응답 → 응답 추가…: `bridge:root=com.apple.NanoMailBridgeSettings&path=Default%20Replies#Add%20reply%E2%80%A6`
- Mail → 서명: `bridge:root=com.apple.NanoMailBridgeSettings&path=Signature`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가: `bridge:root=com.apple.StocksBridgeSettings`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 시계 페이스 컴플리케이션에 표시: `bridge:root=com.apple.StocksBridgeSettings#Clock%20Face%20Complication%20Shows`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 현재가: `bridge:root=com.apple.StocksBridgeSettings#Current%20Price`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 포인트 변동: `bridge:root=com.apple.StocksBridgeSettings#Points%20Change`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 등락률: `bridge:root=com.apple.StocksBridgeSettings#Percentage%20Change`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 시가 총액: `bridge:root=com.apple.StocksBridgeSettings#Market%20Cap`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → Siri 페이스에 표시할 주식: `bridge:root=com.apple.StocksBridgeSettings#Siri%20Face%20Shows%20Quote%20For`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 선택된 주식: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock`
- Siri 카드에 선택된 주식 | 등락률 | 시가 총액 | 주식 | 포인트 변동 | 현재가 → 선택된 주식 → 선택된 주식: `bridge:root=com.apple.StocksBridgeSettings&path=Selected%20Stock#Selected%20Stock`
- 활동: `bridge:root=com.apple.HealthAppsSettings`
- 활동 → 진행 상황 업데이트: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL`
- 활동 → 진행 상황 업데이트 → 없음: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#ZERO_HOURS_ID`
- 활동 → 진행 상황 업데이트 → 2시간마다: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#TWO_HOURS_ID`
- 활동 → 진행 상황 업데이트 → 4시간마다: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#FOUR_HOURS_ID`
- 활동 → 진행 상황 업데이트 → 6시간마다: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#SIX_HOURS_ID`
- 활동 → 진행 상황 업데이트 → 8시간마다: `bridge:root=com.apple.HealthAppsSettings&path=PROGRESS_UPDATES_ENABLED_LABEL#EIGHT_HOURS_ID`
- 활동 → 목표 달성: `bridge:root=com.apple.HealthAppsSettings#ACHIEVEMENTS_ENABLED_LABEL`
- 활동 → 주간 요약: `bridge:root=com.apple.HealthAppsSettings#WEEKLY_SUMMARY_ENABLED_LABEL`
- 활동 → 일일 코칭: `bridge:root=com.apple.HealthAppsSettings#DAILY_PROGRESS_ENABLED_LABEL`
- 활동 → 목표 완료: `bridge:root=com.apple.HealthAppsSettings#GOAL_COMPLETIONS_ENABLED_LABEL`
- 활동 → 특별 도전 목표: `bridge:root=com.apple.HealthAppsSettings#REMOTE_ACHIEVEMENTS_ENABLED_LABEL`
- 활동 → 활동 공유 알림: `bridge:root=com.apple.HealthAppsSettings#ACTIVITY_SHARING_NOTIFICATIONS_ENABLED`
- 날씨: `bridge:root=com.apple.weatherbridgesettings`
- 날씨 → 기본 도시: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City`
- 날씨 → 기본 도시 → 기본 도시: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Default%20City`
- 날씨 → 기본 도시 → 현재 위치: `bridge:root=com.apple.weatherbridgesettings&path=Default%20City#Current%20Location`
- 연락처: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired`
- 연락처 → 정렬 순서: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder`
- 연락처 → 정렬 순서 → 이름, 성: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#0`
- 연락처 → 정렬 순서 → 성, 이름: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=contactsSortOrder#1`
- 연락처 → 표시 순서: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder`
- 연락처 → 표시 순서 → 이름, 성: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#1`
- 연락처 → 표시 순서 → 성, 이름: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=NSPersonNameDefaultDisplayNameOrder#2`
- 연락처 → 줄인 이름: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName`
- 연락처 → 줄인 이름 → 줄인 이름: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Short%20Name`
- 연락처 → 줄인 이름 → 이름 및 성 이니셜: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20&%20Last%20Initial`
- 연락처 → 줄인 이름 → 이름 이니셜 및 성: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Initial%20&%20Last%20Name`
- 연락처 → 줄인 이름 → 이름만: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#First%20Name%20Only`
- 연락처 → 줄인 이름 → 성만: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Last%20Name%20Only`
- 연락처 → 줄인 이름 → 별명 사용: `bridge:root=com.apple.NanoContactsBridgeSettingsPaired&path=PersonShortName#Prefer%20Nicknames`
- 손쉬운 사용: `bridge:root=ACCESSIBILITY`
- 손쉬운 사용 → 시각 지원: `bridge:root=ACCESSIBILITY#VISION`
- 손쉬운 사용 → VoiceOver: `bridge:root=ACCESSIBILITY&path=VOICEOVER_TITLE`
- 손쉬운 사용 → 확대/축소: `bridge:root=ACCESSIBILITY&path=ZOOM_TITLE`
- 손쉬운 사용 → 볼드체 텍스트: `bridge:root=ACCESSIBILITY#BoldTextEnabled`
- 손쉬운 사용 → 켬/끔 레이블: `bridge:root=ACCESSIBILITY#OnOffLabelsEnabled`
- 손쉬운 사용 → 흑백 모드: `bridge:root=ACCESSIBILITY#GrayscaleDisplay`
- 손쉬운 사용 → 투명도 줄이기: `bridge:root=ACCESSIBILITY#REDUCE_TRANSPARENCY`
- 손쉬운 사용 → 동작 줄이기: `bridge:root=ACCESSIBILITY&path=ReduceMotion`
- 손쉬운 사용 → 차임: `bridge:root=ACCESSIBILITY&path=TapticChimesCell`
- 손쉬운 사용 → 차임 → 차임: `bridge:root=ACCESSIBILITY&path=TapticChimesCell#Chimes`
- 손쉬운 사용 → 차임 → 시간 지정: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule`
- 손쉬운 사용 → 차임 → 시간 지정 → 매시간: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#Hourly`
- 손쉬운 사용 → 차임 → 시간 지정 → 30분: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#30%20minutes`
- 손쉬운 사용 → 차임 → 시간 지정 → 15분: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Schedule#15%20minutes`
- 손쉬운 사용 → 차임 → 소리: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds`
- 손쉬운 사용 → 차임 → 소리 → 종: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Bells`
- 손쉬운 사용 → 차임 → 소리 → 새: `bridge:root=ACCESSIBILITY&path=TapticChimesCell/Sounds#Birds`
- 손쉬운 사용 → 동작: `bridge:root=ACCESSIBILITY#MotorGroupCell`
- 손쉬운 사용 → 측면 버튼 클릭 속도: `bridge:root=ACCESSIBILITY&path=SideButton`
- 손쉬운 사용 → 측면 버튼 클릭 속도 → 클릭 속도: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_SPEED_HEADER`
- 손쉬운 사용 → 측면 버튼 클릭 속도 → 기본 설정: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_DEFAULT`
- 손쉬운 사용 → 측면 버튼 클릭 속도 → 느리게: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOW`
- 손쉬운 사용 → 측면 버튼 클릭 속도 → 가장 느리게: `bridge:root=ACCESSIBILITY&path=SideButton#SIDE_CLICK_SPEED_SLOWEST`
- 손쉬운 사용 → 터치 조절: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell`
- 손쉬운 사용 → 터치 조절 → 터치 조절: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#TOUCH_ACCOMMODATIONS_SWITCHER`
- 손쉬운 사용 → 터치 조절 → 대기 시간: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDurationGroup`
- 손쉬운 사용 → 터치 조절 → 대기 시간: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#HoldDuration`
- 손쉬운 사용 → 터치 조절 → 반복 무시: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeatGroup`
- 손쉬운 사용 → 터치 조절 → 반복 무시: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#IgnoreRepeat`
- 손쉬운 사용 → 터치 조절 → 탭 지원: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#Tap%20Assistance`
- 손쉬운 사용 → 터치 조절 → 끔: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#OFF`
- 손쉬운 사용 → 터치 조절 → 첫 번째 터치 위치 사용: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_TOUCH`
- 손쉬운 사용 → 터치 조절 → 마지막 터치 위치 사용: `bridge:root=ACCESSIBILITY&path=TouchAccommodationsCell#ACTIVATE_ON_RELEASE`
- 손쉬운 사용 → 휠체어 활동: `bridge:root=ACCESSIBILITY#MOBILITY`
- 손쉬운 사용 → 워키토키: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalkGroup`
- 손쉬운 사용 → 탭하여 대화하기: `bridge:root=ACCESSIBILITY#WalkieTalkieTapToTalk`
- 손쉬운 사용 → 청각 지원: `bridge:root=ACCESSIBILITY#HEARING`
- 손쉬운 사용 → RTT: `bridge:root=ACCESSIBILITY&path=RTT`
- 손쉬운 사용 → RTT → RTT: `bridge:root=ACCESSIBILITY&path=RTT#RTT_TITLE`
- 손쉬운 사용 → RTT → 중계 번호: `bridge:root=ACCESSIBILITY&path=RTT/TTY_RELAY_LABEL`
- 손쉬운 사용 → RTT → 즉시 보내기: `bridge:root=ACCESSIBILITY&path=RTT#TTY_REALTIME_LABEL`
- 손쉬운 사용 → RTT → 기본 응답: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE`
- 손쉬운 사용 → RTT → 기본 응답 → 기본 응답: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Default%20Replies`
- 손쉬운 사용 → RTT → 기본 응답 → 응답 추가…: `bridge:root=ACCESSIBILITY&path=RTT/RTT_CANNED_TEXT_TITLE#Add%20reply%E2%80%A6`
- 손쉬운 사용 → 모노 오디오: `bridge:root=ACCESSIBILITY#MonoAudioEnabled`
- 손쉬운 사용 → 좌-우 스테레오 균형: `bridge:root=ACCESSIBILITY#LEFT_RIGHT_BALANCE_SPOKEN`
- 손쉬운 사용 → 헤드폰 알림: `bridge:root=ACCESSIBILITY#HeadphoneNotificationsID`
- 손쉬운 사용 → 보청 기기: `bridge:root=ACCESSIBILITY#HearingDevicesComplicationGroupID`
- 손쉬운 사용 → 컴플리케이션: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID`
- 손쉬운 사용 → 컴플리케이션 → 마이크 음량: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Mic%20Volume`
- 손쉬운 사용 → 컴플리케이션 → 프로그램: `bridge:root=ACCESSIBILITY&path=HearingDevicesComplicationRowID#Program`
- 손쉬운 사용 → 탭틱 시간 속도: `bridge:root=ACCESSIBILITY#TapticTimeSpeedAdjustmentGroup`
- 손쉬운 사용 → 손쉬운 사용 단축키: `bridge:root=ACCESSIBILITY&path=AX_SHORTCUT`
- 경로 알림 | 지도: `bridge:root=com.apple.NanoMapsBridgeSettings`
- 경로 알림 | 지도 → 경로 알림: `bridge:root=com.apple.NanoMapsBridgeSettings#Turn%20Alerts`
- 경로 알림 | 지도 → 운전: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving`
- 경로 알림 | 지도 → CarPlay로 운전: `bridge:root=com.apple.NanoMapsBridgeSettings#Driving%20with%20CarPlay`
- 경로 알림 | 지도 → 도보: `bridge:root=com.apple.NanoMapsBridgeSettings#Walking`
- 경로 알림 | 지도 → 자전거: `bridge:root=com.apple.NanoMapsBridgeSettings#Cycling`
- 경로 알림 | 지도 → 내비게이터 보기: `bridge:root=com.apple.NanoMapsBridgeSettings#Show%20Navigation`
- 경로 알림 | 지도 → 대중교통: `bridge:root=com.apple.NanoMapsBridgeSettings#Transit`
- 경로 알림 | 지도 → 빌드 정보:: `bridge:root=com.apple.NanoMapsBridgeSettings#Build%20Info%3A`
- Mail 및 캘린더: `bridge:root=com.apple.BridgeRemoteAccounts`
- Mail 및 캘린더 → 계정: `bridge:root=com.apple.BridgeRemoteAccounts#Accounts`
- Mail 및 캘린더 → Google 계정 추가...: `bridge:root=com.apple.BridgeRemoteAccounts#ADD_GOOGLE_ACCOUNT`
- Mail 및 캘린더 → 가져오기: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch`
- Mail 및 캘린더 → 가져오기 → 끔: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Off`
- Mail 및 캘린더 → 가져오기 → 매시간: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#Hourly`
- Mail 및 캘린더 → 가져오기 → 30분: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#30%20min`
- Mail 및 캘린더 → 가져오기 → 15분: `bridge:root=com.apple.BridgeRemoteAccounts&path=Fetch#15%20min`
- 심장: `bridge:root=com.apple.HeartRateSettings`
- 심장 → 심장: `bridge:root=com.apple.HeartRateSettings#1`
- 심장 → 심박수 알림: `bridge:root=com.apple.HeartRateSettings#2`
- 심장 → 고심박수: `bridge:root=com.apple.HeartRateSettings#3`
- 심장 → 저심박수: `bridge:root=com.apple.HeartRateSettings#4`
- 심장 → 불규칙한 박동: `bridge:root=com.apple.HeartRateSettings#5`
- 심장 → 건강 앱에서 심전도 검사 기록 보기: `bridge:root=com.apple.HeartRateSettings#6`
- 심장 → 심전도: `bridge:root=com.apple.HeartRateSettings#7`
- App Store: `bridge:root=com.apple.BridgeAppStoreDaemonSettings`
- App Store → 자동 다운로드: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#automaticDownloadSpecifier`
- App Store → 자동 업데이트: `bridge:root=com.apple.BridgeAppStoreDaemonSettings#Automatic%20Updates`
- 수면: `bridge:root=com.apple.NanoBedtimeBridgeSettings`
- 수면 → 건강 앱에서 수면 설정: `bridge:root=com.apple.NanoBedtimeBridgeSettings#SET_UP_SLEEP_CELL_ID`
- 동기화된 음악 | 음악 | 저장 공간 제한: `bridge:root=com.apple.NanoMusicBridgeSettings`
- 동기화된 음악 | 음악 | 저장 공간 제한 → 플레이리스트 및 앨범: `bridge:root=com.apple.NanoMusicBridgeSettings#PLAYLISTS%20&%20ALBUMS`
- 동기화된 음악 | 음악 | 저장 공간 제한 → 음악 추가…: `bridge:root=com.apple.NanoMusicBridgeSettings#Add%20Music%E2%80%A6`
- 지갑 및 Apple Pay: `bridge:root=com.apple.NanoPassbookBridgeSettings`
- 지갑 및 Apple Pay → Apple Cash: `bridge:root=com.apple.NanoPassbookBridgeSettings#Apple%C2%A0Cash`
- 지갑 및 Apple Pay → 카드 추가: `bridge:root=com.apple.NanoPassbookBridgeSettings#Add%20Card`
- 지갑 및 Apple Pay → 알림: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_RADIO_GROUP_ID`
- 지갑 및 Apple Pay → 나의 iPhone 미러링: `bridge:root=com.apple.NanoPassbookBridgeSettings#MIRROR_MY_COMPANION_ID`
- 지갑 및 Apple Pay → 사용자화: `bridge:root=com.apple.NanoPassbookBridgeSettings#CUSTOM_ID`
- 건강: `bridge:root=com.apple.BridgeHealthSettings`
- 나의 Apple Watch 찾기: `bridge:root=ActiveWatch`
- 나의 Apple Watch 찾기 → 새로운 시계 페어링: `bridge:root=ActiveWatch&path=Pair%20New%20Watch`
- 마음 챙기기: `bridge:root=com.apple.MindSettings`
- 마음 챙기기 → 알림 허용: `bridge:root=com.apple.MindSettings#ALLOW_NOTIFICATIONS_ID`
- 마음 챙기기 → 알림 센터에 보내기: `bridge:root=com.apple.MindSettings#SEND_TO_NOTIFICATION_CENTER_ID`
- 마음 챙기기 → 알림 끔: `bridge:root=com.apple.MindSettings#NOTIFICATIONS_OFF_ID`
- 마음 챙기기 → 마음 챙기기 미리 알림: `bridge:root=com.apple.MindSettings#MIND_GROUP_ID`
- 마음 챙기기 → 하루의 시작: `bridge:root=com.apple.MindSettings#MIND_START_OF_DAY_REMINDER`
- 마음 챙기기 → 하루의 마무리: `bridge:root=com.apple.MindSettings#MIND_END_OF_DAY_REMINDER`
- 마음 챙기기 → 미리 알림 추가…: `bridge:root=com.apple.MindSettings#Add%20Reminder%E2%80%A6`
- 마음 챙기기 → 주간 요약: `bridge:root=com.apple.MindSettings#MIND_WEEKLY_SUMMARY_ID`
- 마음 챙기기 → 오늘 하루 알림 끄기: `bridge:root=com.apple.MindSettings#MIND_MUTE_FOR_TODAY_ID`
- 마음 챙기기 → 호흡수: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID`
- 마음 챙기기 → 호흡수 → 분당 호흡수 4회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_4`
- 마음 챙기기 → 호흡수 → 분당 호흡수 5회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_5`
- 마음 챙기기 → 호흡수 → 분당 호흡수 6회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_6`
- 마음 챙기기 → 호흡수 → 분당 호흡수 7회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_7`
- 마음 챙기기 → 호흡수 → 분당 호흡수 8회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_8`
- 마음 챙기기 → 호흡수 → 분당 호흡수 9회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_9`
- 마음 챙기기 → 호흡수 → 분당 호흡수 10회: `bridge:root=com.apple.MindSettings&path=MIND_BREATHE_RATE_ID#ID_BPM_10`
- 마음 챙기기 → 햅틱: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID`
- 마음 챙기기 → 햅틱 → 없음: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#NONE_ID`
- 마음 챙기기 → 햅틱 → 약하게: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#MINIMAL_ID`
- 마음 챙기기 → 햅틱 → 뚜렷하게: `bridge:root=com.apple.MindSettings&path=MIND_HAPTICS_ID#PROMINENT_ID`
- 팟캐스트: `bridge:root=com.apple.private.PodcastsBridgeSettings`
- 전화: `bridge:root=com.apple.PhoneBridgeSettings`
- 전화 → 통화: `bridge:root=com.apple.PhoneBridgeSettings#carrier_direct_calling_group_id`
- 전화 → 벨소리: `bridge:root=com.apple.PhoneBridgeSettings#RINGTONE`
- 전화 → 사운드: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_SOUND`
- 전화 → 햅틱: `bridge:root=com.apple.PhoneBridgeSettings#INCOMING_CALL_HAPTIC`
- 수심: `bridge:root=com.apple.DepthCompanionSettings`
- 동작 버튼: `bridge:root=STING_TITLE`
- 이동통신사 설정: `bridge:root=CARRIER_SETTINGS`
- 셀룰러: `bridge:root=CELLULAR_ID`
- Dock: `bridge:root=DOCK`
- Dock → Dock 정렬: `bridge:root=DOCK#OrderingOptionGroup`
- Dock → 최근 항목: `bridge:root=DOCK#Recents`
- Dock → 즐겨찾기: `bridge:root=DOCK#Favorites`
- Dock: `bridge:root=DOCK.0`
- Dock → Dock 정렬: `bridge:root=DOCK.0#OrderingOptionGroup`
- Dock → 최근 항목: `bridge:root=DOCK.0#Recents`
- Dock → 즐겨찾기: `bridge:root=DOCK.0#Favorites`
- 오디오북: `bridge:root=com.apple.NanoBooks.BridgeSettings`
- 오디오북 → 로그인: `bridge:root=com.apple.NanoBooks.BridgeSettings#Sign%20In`
- 사진 제한 | 선택된 사진 앨범: `bridge:root=com.apple.mobileslideshow`
- 읽음 확인 보내기: `bridge:root=com.apple.MessagesBridgeSettings%23READ_RECEIPTS`